--- a/index.html
+++ b/index.html
@@ -40,36 +40,36 @@
         </div>
     </section>
 
-    <section class="content-section" id="seemore">
+    <section class="game-dev-section" id="seemore">
         <h2>Learn & Grow</h2>
-        <div class="container">
-            <div class="flex-item">
-                <div class="flex-img">
+        <div class="text-container">
+            <div class="game-module-card">
+                <div class="module-info">
                     <img src="images/career.jpg" alt="Career">
                 </div>
-                <div class="flex-info">
+                <div class="module-info">
                     <h1>Career</h1>
                     <hr>
                     <p>Learning programming opens doors to a wide range of careers, from game development & software
                         engineering and many more.</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-img">
+            <div class="game-module-card">
+                <div class="module-info">
                     <img src="images/problem-solving.jpg" alt="Problem-solving">
                 </div>
-                <div class="flex-info">
+                <div class="module-info">
                     <h1>Problem-solving</h1>
                     <hr>
                     <p>Programming enhances your problem-solving abilities by teaching you how to break down complex
                         problems into manageable parts.</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-img">
+            <div class="game-module-card">
+                <div class="module-info">
                     <img src="images/creative.jpg" alt="creativity">
                 </div>
-                <div class="flex-info">
+                <div class="module-info">
                     <h1>Creativity</h1>
                     <hr>
                     <p>As a programmer, you can contribute to technological innovations like developing groundbreaking
@@ -79,11 +79,11 @@
         </div>
     </section>
 
-    <section class="split-container">
-        <div class="split">
+    <section class="game-container">
+        <div class="game-card">
             <img src="images/make_game.gif" alt="gif of make_game">
         </div>
-        <div class="split">
+        <div class="game-card">
             <div>
                 <h1>1. Learn More about our company</h1>
                 <p>
@@ -96,11 +96,11 @@
         </div>
     </section>
 
-    <section class="split-container reversed">
-        <div class="split">
+    <section class="game-container reversed">
+        <div class="game-card">
             <img src="images/service.gif" alt="gif of service">
         </div>
-        <div class="split">
+        <div class="game-card">
             <div>
                 <h1>2. See what we have to offer</h1>
                 <p>
@@ -113,32 +113,32 @@
         </div>
     </section>
 
-    <section class="content-section">
+    <section class="game-dev-section">
         <h2>Contact Us</h2>
-        <div class="split-container">
-            <div class="flex-item">
-                <div class="split-img">
+        <div class="game-container">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/phone-icon.png" alt="Phone number">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h4>Phone number:</h4>
                     <h4>+65 93820569</h4>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="split-img">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/email-icon.png" alt="Email">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h4>Email:</h4>
                     <h4>S10270417@connect.np.edu.sg</h4>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="split-img">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/Location-icon.png" alt="Location">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h4>Location:</h4>
                     <h4>535 Clementi Road, Singapore 599489</h4>
                 </div>
@@ -146,11 +146,12 @@
         </div>
     </section>
 
-    <section class="content-section">
-        <h2>Send Email</h2>
+    <section class="game-dev-section">
+        <h2>Send us a message!</h2>
         <form id="emailForm" onsubmit="return validateEmail();">
-            <div class="form-container">
+            <div class="contact-us-container">
                 <input id="emailInput" type="email" placeholder="example@gmail.com" required>
+                <textarea rows="4" cols="50" type="text" placeholder="Enter your message here!" required></textarea>
                 <button type="submit">Submit</button>
             </div>
         </form>
@@ -158,12 +159,11 @@
 
     <footer>
         <div class="footer-content">
-            <h3>Our Socials</h3>
+            <h4>Our Socials</h4>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"
-                        alt="Facebook"></a>
-                <a href="https://www.youtube.com/@kencomputer-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"alt="Facebook"></a>
+                <a href="https://www.youtube.com/@kengaming-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
                 <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
 
