--- a/services.html
+++ b/services.html
@@ -36,51 +36,51 @@
             </div>
         </div>
     </section>
-    <section class="content-section" id="seemore">
+    <section class="game-dev-section" id="seemore">
         <h2>Testimonials</h2>
-        <div class="container">
-            <div class="flex-item">
-                <div class="flex-info">
+        <div class="text-container">
+            <div class="game-module-card">
+                <div class="module-info">
                     <h1>Alex T., Indie Game Developer</h1>
                     <hr>
                     <p><i>"The Pro Plan helped me publish my first indie game!" </i></p>
                     <p>5.0/5.0⭐</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-info">
+            <div class="game-module-card">
+                <div class="module-info">
                     <h1>Jamie L. , Game Designer</h1>
                     <hr>
                     <p><i>"The courses & Elite Plan mentorship was a game-changer!"</i></p>
                     <p>4.8/5.0⭐</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-info">
+            <div class="game-module-card">
+                <div class="module-info">
                     <h1>Priya M., Student</h1>
                     <hr>
                     <p><i>"I learned more in two months here than in a year of self-study. The webinars are amazing!"</i></p>
                     <p>5.0/5.0⭐</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-info">
+            <div class="game-module-card">
+                <div class="module-info">
                     <h1>Ethan R., Freelance Game Artist</h1>
                     <hr>
                     <p><i>"Having access to professional game assets and design tips has been invaluable."</i></p>
                     <p>4.6/5.0⭐</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-info">
+            <div class="game-module-card">
+                <div class="module-info">
                     <h1>Sarah K., Game developer Hobbyist.</h1>
                     <hr>
                     <p><i>"The step-by-step guides were so easy to follow. I created a game with ease!"</i></p>
                     <p>4.8/5.0⭐</p>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="flex-info">
+            <div class="game-module-card">
+                <div class="module-info">
                     <h1>Marco V., Game creator Developer</h1>
                     <hr>
                     <p><i>"I loved the Elite Plan's job board. I landed my first freelance gig in just two weeks!"</i></p>
@@ -90,14 +90,14 @@
         </div>
     </section>
 
-    <section class="content-section">
+    <section class="game-dev-section">
         <h2>Membership</h2>
-        <div class="split-container">
-            <div class="flex-item">
-                <div class="split-img">
+        <div class="game-container">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/bronze.png" alt="bronze">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h1>Basic Plan</h1>
                     <hr>
                     <h5>✅ Access to beginner-level tutorials and game templates.</h5>
@@ -105,13 +105,13 @@
                     <h5>✅ Monthly Q&A with instructors.</h5>
                     <h5>✅ Step by step tutorials on how to code games</h5>
                 </div>
-                <a href="#" class="button">$24.99 per month</a>
+                <a href="payment.html" class="button" id="basic-plan">$24.99 per month</a>
             </div>
-            <div class="flex-item">
-                <div class="split-img">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/silver.png" alt="silver">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h1>Pro Plan</h1>
                     <hr>
                     <h5>✅ Everything in the Basic Plan.</h5>
@@ -119,13 +119,13 @@
                     <h5>✅ Weekly live workshops and webinars with professionals.</h5>
                     <h5>✅ Downloadable assets like textures, sprites, and 3D models.</h5>
                 </div>
-                <a href="#" class="button">$44.99 per month</a>
+                <a href="payment.html" class="button" id="pro-plan">$44.99 per month</a>
             </div>
-            <div class="flex-item">
-                <div class="split-img">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/gold.png" alt="gold">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h1>Elite Plan</h1>
                     <hr>
                     <h5>✅ Everything in the Pro Plan with more benefits.</h5>
@@ -133,37 +133,37 @@
                     <h5>✅ Portfolio review and guidance for job readiness.</h5>
                     <h5>✅ Early access to new courses and exclusive content.</h5>
                 </div>
-                <a href="#" class="button">$79.99 per month</a>
+                <a href="payment.html" class="button" id="elite-plan">$79.99 per month</a>
             </div>
         </div>
     </section>
 
-    <section class="content-section">
+    <section class="game-dev-section">
         <h2>Contact Us</h2>
-        <div class="split-container">
-            <div class="flex-item">
-                <div class="split-img">
+        <div class="game-container">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/phone-icon.png" alt="Phone number">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h4>Phone number:</h4>
                     <h4>+65 93820569</h4>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="split-img">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/email-icon.png" alt="Email">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h4>Email:</h4>
                     <h4>S10270417@connect.np.edu.sg</h4>
                 </div>
             </div>
-            <div class="flex-item">
-                <div class="split-img">
+            <div class="game-module-card">
+                <div class="game-card-img">
                     <img src="images/Location-icon.png" alt="Location">
                 </div>
-                <div class="split">
+                <div class="game-card">
                     <h4>Location:</h4>
                     <h4>535 Clementi Road, Singapore 599489</h4>
                 </div>
@@ -171,11 +171,12 @@
         </div>
     </section>
 
-    <section class="content-section">
-        <h2>Send Email</h2>
+    <section class="game-dev-section">
+        <h2>Send us a message!</h2>
         <form id="emailForm" onsubmit="return validateEmail();">
-            <div class="form-container">
+            <div class="contact-us-container">
                 <input id="emailInput" type="email" placeholder="example@gmail.com" required>
+                <textarea rows="4" cols="50" type="text" placeholder="Enter your message here!" required></textarea>
                 <button type="submit">Submit</button>
             </div>
         </form>
@@ -183,11 +184,11 @@
 
     <footer>
         <div class="footer-content">
-            <h3>Our Socials</h3>
+            <h4>Our Socials</h4>
 
             <div class="social-icons">
                 <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="https://www.youtube.com/@kencomputer-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
+                <a href="https://www.youtube.com/@kengaming-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
                 <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
 
