Added payment.html page

--- a/about_us.html
+++ b/about_us.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>Ken gaming</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js">
     </script>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">
@@ -41,15 +42,16 @@
     </div>
     <section class="game-container reversed">
         <div class="game-card">
-            <img src="https://static.vecteezy.com/system/resources/previews/014/325/816/non_2x/hit-the-target-with-an-arrow-people-working-together-to-achieve-business-target-goal-achievement-and-in-time-concept-flat-cartoon-character-design-for-landing-page-web-mobile-and-banner-vector.jpg" alt="our-mission">
+            <img src="https://static.vecteezy.com/system/resources/previews/014/325/816/non_2x/hit-the-target-with-an-arrow-people-working-together-to-achieve-business-target-goal-achievement-and-in-time-concept-flat-cartoon-character-design-for-landing-page-web-mobile-and-banner-vector.jpg"
+                alt="our-mission">
         </div>
         <div class="game-card">
             <div>
                 <h1>Our Mission</h1>
                 <p>
-                    Our mission is simple: to help you turn your game ideas into reality. 
-                    We believe that anyone with a passion for gaming and storytelling can 
-                    learn to build games, and we're here to make that process accessible, 
+                    Our mission is simple: to help you turn your game ideas into reality.
+                    We believe that anyone with a passion for gaming and storytelling can
+                    learn to build games, and we're here to make that process accessible,
                     enjoyable, and effective.
                 </p>
             </div>
@@ -58,7 +60,8 @@
 
     <section class="game-container">
         <div class="game-card">
-            <img src="https://static.semrush.com/blog/uploads/media/66/1e/661ee30966de586d8e32247e4f3cf427/how-much-is-website-worth.svg" alt="our-value">
+            <img src="https://static.semrush.com/blog/uploads/media/66/1e/661ee30966de586d8e32247e4f3cf427/how-much-is-website-worth.svg"
+                alt="our-value">
         </div>
         <div class="game-card">
             <div>
@@ -66,7 +69,7 @@
                 <p>
                     We encourage students to think outside the box and experiment with their ideas.
                     Game development is a team effort, and we value collaboration both in and out of the classroom.
-                    We're passionate about games and the process of making them, and we want to ignite that same passion 
+                    We're passionate about games and the process of making them, and we want to ignite that same passion
                     in our students.
                 </p>
             </div>
@@ -75,7 +78,8 @@
 
     <section class="game-container reversed">
         <div class="game-card">
-            <img src="https://www.shutterstock.com/image-vector/path-person-success-on-mountains-600nw-2143242645.jpg" alt="our-goals">
+            <img src="https://www.shutterstock.com/image-vector/path-person-success-on-mountains-600nw-2143242645.jpg"
+                alt="our-goals">
         </div>
         <div class="game-card">
             <div>
@@ -92,36 +96,39 @@
     <section class="text-container">
         <div class="game-module-card">
             <div class="module-info">
-                <img src="https://media.istockphoto.com/id/1451456981/photo/smiling-it-programmer-working-on-desktop-computer-male-specialist-creating-innovative.jpg?s=612x612&w=0&k=20&c=Jvo2s040zfV4NH3xFct5s22nbqKr2WaVWchh0Gio8Sg=" alt="Eleanor-Hartwell">
+                <img src="https://media.istockphoto.com/id/1451456981/photo/smiling-it-programmer-working-on-desktop-computer-male-specialist-creating-innovative.jpg?s=612x612&w=0&k=20&c=Jvo2s040zfV4NH3xFct5s22nbqKr2WaVWchh0Gio8Sg="
+                    alt="Eleanor-Hartwell">
             </div>
             <div class="module-info">
                 <h4>Eleanor Hartwell</h4>
                 <hr>
-                <p>Eleanor, a seasoned game programmer with 15+ years of experience and a 
+                <p>Eleanor, a seasoned game programmer with 15+ years of experience and a
                     Master's in AI, inspires hands-on game creation.
                 </p>
             </div>
         </div>
         <div class="game-module-card">
             <div class="module-info">
-                <img src="https://media.istockphoto.com/id/1451457256/photo/bald-it-programmer-working-on-desktop-computer-male-specialist-creating-innovative-software.jpg?s=612x612&w=0&k=20&c=OF_rukK14YeLzYc9GO5AURENYzAwA0ehAvKlFb8ekH8=" alt="Marcus-Tanaka">
+                <img src="https://media.istockphoto.com/id/1451457256/photo/bald-it-programmer-working-on-desktop-computer-male-specialist-creating-innovative-software.jpg?s=612x612&w=0&k=20&c=OF_rukK14YeLzYc9GO5AURENYzAwA0ehAvKlFb8ekH8="
+                    alt="Marcus-Tanaka">
             </div>
             <div class="module-info">
                 <h4>Marcus Tanaka</h4>
                 <hr>
-                <p>Marcus, an award-winning game developer and narrative consultant, 
+                <p>Marcus, an award-winning game developer and narrative consultant,
                     teaches game design through hands-on workshops on prototyping.
                 </p>
             </div>
         </div>
         <div class="game-module-card">
             <div class="module-info">
-                <img src="https://media.istockphoto.com/id/1206826958/photo/low-below-angle-view-photo-of-cheerful-woman-finishing-developing-computer-game-solving-all.jpg?s=612x612&w=0&k=20&c=rGJ5nmVefrti_TqRXYLdGHAcCzn6ZdDYoxmVzyOrNJU=" alt="sophia-Mendez">
+                <img src="https://media.istockphoto.com/id/1206826958/photo/low-below-angle-view-photo-of-cheerful-woman-finishing-developing-computer-game-solving-all.jpg?s=612x612&w=0&k=20&c=rGJ5nmVefrti_TqRXYLdGHAcCzn6ZdDYoxmVzyOrNJU="
+                    alt="sophia-Mendez">
             </div>
             <div class="module-info">
                 <h4>Sophia Mendez</h4>
                 <hr>
-                <p>Sophia, a VR game design pioneer with a Ph.D. in HCI, 
+                <p>Sophia, a VR game design pioneer with a Ph.D. in HCI,
                     teaches immersive storytelling and interactivity in 3D spaces.
                 </p>
             </div>
@@ -183,7 +190,8 @@
             </div>
             <div class="game-module-card">
                 <div class="game-card-img">
-                    <img src="https://cdn.iconscout.com/icon/free/png-256/free-csharp-logo-icon-download-in-svg-png-gif-file-formats--programming-langugae-language-pack-logos-icons-1175242.png?f=webp&w=256" alt="C#">
+                    <img src="https://cdn.iconscout.com/icon/free/png-256/free-csharp-logo-icon-download-in-svg-png-gif-file-formats--programming-langugae-language-pack-logos-icons-1175242.png?f=webp&w=256"
+                        alt="C#">
                 </div>
                 <div class="game-card">
                     <h3>C#</h3>
@@ -207,7 +215,8 @@
             </div>
             <div class="game-module-card">
                 <div class="game-card-img">
-                    <img src="https://static.vecteezy.com/system/resources/previews/027/127/560/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="Javascript">
+                    <img src="https://static.vecteezy.com/system/resources/previews/027/127/560/non_2x/javascript-logo-javascript-icon-transparent-free-png.png"
+                        alt="Javascript">
                 </div>
                 <div class="game-card">
                     <h3>Javascript</h3>
@@ -215,6 +224,8 @@
             </div>
         </div>
     </section>
+
+
     <section class="game-dev-section">
         <h2>Contact Us</h2>
         <div class="game-container">
@@ -250,10 +261,10 @@
 
     <section class="game-dev-section">
         <h2>Send us a message!</h2>
-        <form id="emailForm" onsubmit="return validateEmail();">
+        <form id="emailForm" onsubmit="return validateContactUs();">
             <div class="contact-us-container">
                 <input id="emailInput" type="email" placeholder="example@gmail.com" required>
-                <textarea rows="4" cols="50" type="text" placeholder="Enter your message here!" required></textarea>
+                <textarea id="messageInput" rows="4" cols="50" placeholder="Enter your message here!" required></textarea>
                 <button type="submit">Submit</button>
             </div>
         </form>
@@ -264,7 +275,8 @@
             <h4>Our Socials</h4>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"
+                        alt="Facebook"></a>
                 <a href="https://www.youtube.com/@kengaming-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
                 <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
