--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>Ken gaming</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js">
     </script>
@@ -34,7 +34,7 @@
             <img src="images/game.gif" alt="Hero gif of game" class="hero-image">
             <div class="hero-text">
                 <h1>Learn . Code . Play</h1>
-                <p>Discover the endless prossibility of game making with us.</p>
+                <p>Discover the endless possibility of game making with us.</p>
                 <a href="#seemore" class="button">See more</a>
             </div>
         </div>
@@ -85,7 +85,7 @@
         </div>
         <div class="game-card">
             <div>
-                <h1>1. Learn More about our company</h1>
+                <h1>1. Learn more about our company</h1>
                 <p>
                     Discover who we are, our mission, and how we're shaping the future
                     of gaming. Learn about our journey, values, and the team behind our
@@ -148,10 +148,10 @@
 
     <section class="game-dev-section">
         <h2>Send us a message!</h2>
-        <form id="emailForm" onsubmit="return validateEmail();">
+        <form id="emailForm" onsubmit="return validateContactUs();">
             <div class="contact-us-container">
                 <input id="emailInput" type="email" placeholder="example@gmail.com" required>
-                <textarea rows="4" cols="50" type="text" placeholder="Enter your message here!" required></textarea>
+                <textarea id="messageInput" rows="4" cols="50" placeholder="Enter your message here!" required></textarea>
                 <button type="submit">Submit</button>
             </div>
         </form>
