--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>Ken gaming</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js">
     </script>
@@ -57,7 +57,7 @@
             </div>
             <div class="game-module-card">
                 <div class="module-info">
-                    <h1>Priya M., Student</h1>
+                    <h1>Priya M., College Student</h1>
                     <hr>
                     <p><i>"I learned more in two months here than in a year of self-study. The webinars are amazing!"</i></p>
                     <p>5.0/5.0⭐</p>
@@ -173,10 +173,10 @@
 
     <section class="game-dev-section">
         <h2>Send us a message!</h2>
-        <form id="emailForm" onsubmit="return validateEmail();">
+        <form id="emailForm" onsubmit="return validateContactUs();">
             <div class="contact-us-container">
                 <input id="emailInput" type="email" placeholder="example@gmail.com" required>
-                <textarea rows="4" cols="50" type="text" placeholder="Enter your message here!" required></textarea>
+                <textarea id="messageInput" rows="4" cols="50" placeholder="Enter your message here!" required></textarea>
                 <button type="submit">Submit</button>
             </div>
         </form>
