--- a/payment.html
+++ b/payment.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken gaming</title>
+    <link type="text/css" rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js">
     </script>
@@ -94,7 +95,7 @@
             <h4>Our Socials</h4>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731" target="_blank"><img src="images/facebook.png"alt="Facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"alt="Facebook"></a>
                 <a href="https://www.youtube.com/@kengaming-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
                 <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
