Added Opens new tab when accessing external links

--- a/about_us.html
+++ b/about_us.html
@@ -148,7 +148,7 @@
                 <p>
                     Collect as much pizza as possible before the timer runs out.
                 </p>
-                <a href="https://arcade.makecode.com/S47296-64209-58437-40300" class="button">Try me!</a>
+                <a href="https://arcade.makecode.com/S47296-64209-58437-40300" target="_blank" class="button">Try me!</a>
             </div>
         </div>
         <div class="game-module-card">
@@ -161,7 +161,7 @@
                 <p>
                     Collect as much trash as possible before the timer runs out.
                 </p>
-                <a href="https://arcade.makecode.com/S28386-52677-18405-65656" class="button">Try me!</a>
+                <a href="https://arcade.makecode.com/S28386-52677-18405-65656" target="_blank" class="button">Try me!</a>
             </div>
         </div>
         <div class="game-module-card">
@@ -174,7 +174,7 @@
                 <p>
                     Shoot the incoming fire before losing all of your lives.
                 </p>
-                <a href="https://arcade.makecode.com/S29710-88626-06471-67208" class="button">Try me!</a>
+                <a href="https://arcade.makecode.com/S29710-88626-06471-67208" target="_blank" class="button">Try me!</a>
             </div>
         </div>
     </section>
@@ -276,10 +276,10 @@
             <h4>Our Socials</h4>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"
+                <a href="https://www.facebook.com/profile.php?id=100010956541731" target="_blank"><img src="images/facebook.png"
                         alt="Facebook"></a>
-                <a href="https://www.youtube.com/@kengaming-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
-                <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
+                <a href="https://www.youtube.com/@kengaming-od6rc" target="_blank"><img src="images/youtube.png" alt="Youtube"></a>
+                <a href="https://www.tiktok.com/@ken_28010?lang=en" target="_blank"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
 
             <p>&copy; 2024 Ken gaming. All rights reserved.</p>
