--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             <h4>Our Socials</h4>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731"><img src="images/facebook.png"alt="Facebook"></a>
-                <a href="https://www.youtube.com/@kengaming-od6rc"><img src="images/youtube.png" alt="Youtube"></a>
-                <a href="https://www.tiktok.com/@ken_28010?lang=en"><img src="images/tiktok.png" alt="Tiktok"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731" target="_blank"><img src="images/facebook.png"alt="Facebook"></a>
+                <a href="https://www.youtube.com/@kengaming-od6rc" target="_blank"><img src="images/youtube.png" alt="Youtube"></a>
+                <a href="https://www.tiktok.com/@ken_28010?lang=en" target="_blank"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
 
             <p>&copy; 2024 Ken gaming. All rights reserved.</p>
