--- a/payment.html
+++ b/payment.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="form-row">
-                <button type="submit" class="submit-button">Submit Payment</button>
+                <button type="submit" class="submit-button" onclick="checkForm()">Submit Payment</button>
             </div>
         </form>
     </div>
