Validation & Code Checks for html & Css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken gaming</title>
-    <link type="text/css" rel="stylesheet" href="css/normalize.css" />
+    <link type="text/css" rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js">
     </script>
@@ -163,7 +163,7 @@
             <h4>Our Socials</h4>
 
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100010956541731" target="_blank"><img src="images/facebook.png"alt="Facebook"></a>
+                <a href="https://www.facebook.com/profile.php?id=100010956541731" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
                 <a href="https://www.youtube.com/@kengaming-od6rc" target="_blank"><img src="images/youtube.png" alt="Youtube"></a>
                 <a href="https://www.tiktok.com/@ken_28010?lang=en" target="_blank"><img src="images/tiktok.png" alt="Tiktok"></a>
             </div>
